--- a/backend/demo/src/main/resources/application.properties
+++ b/backend/demo/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.show-sql=false
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/plantilapp
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=lokoloko21
 spring.jpa.generate-ddl=true
 
 # spring.jpa.hibernate.ddl-auto = create-drop
